<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/SoundTest"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="soundTestClick"
        android:text="@string/soundtest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm" />

    <Button
        android:id="@+id/jmpButton"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="jumpButtonClick"
        android:text="@string/jumping_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SoundTest" />

    <Button
        android:id="@+id/fastClick"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="27dp"
        android:onClick="fastClick"
        android:text="@string/fastClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rejecting"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="27dp"
        android:onClick="rejectClick"
        android:text="@string/rejecting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fastClick" />

    <Button
        android:id="@+id/alarm"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="alarmClick"
        android:text="@string/alarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rejecting" />

    <TextView
        android:id="@+id/myAwesomeTextView"
        android:layout_width="254dp"
        android:layout_height="86dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:text="Escriba el mensaje y luego clickee el canal a ser enviado"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jmpButton" />

</android.support.constraint.ConstraintLayout>